<resources>
    <string name="icons">&#x3605; &#x35ad; &#x35ae; &#x35af;</string>
    <string name="icon">&#xe608;</string>
    <string name="icon_clicked">&#xe611;</string>
    <string name="alimama_return_back_text_icon">&#xe650;</string>
    <string name="alimama_more_text_icon">&#xe610;</string>
    <string name="alimama_like_empty_text_icon">&#xe652;</string>
    <string name="alimama_dustbin_delete_text_icon">&#xe612;</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="app_name">远行旅行</string>
    <string name="action_open">开</string>
    <string name="action_close">关</string>
    <string name="resetPassword">找回密码</string>
    <string name="commitPassword">提交新密码</string>
    <string name="sendResetEmail">发送重置密码邮件</string>
    <string name="findPassword">手机找回</string>
    <string name="findPasswordByEmail">邮箱找回</string>
    <string name="login">登录</string>
    <string name="authCode_hint">请输入验证码</string>
    <string name="emailInput">请输入注册时的邮箱</string>
    <string name="register">注册</string>
    <string name="loginNameHint">请输入邮箱/手机账号</string>
    <string name="loginPassWordHint">请输入密码</string>
    <string name="forgetPassWord">忘记密码?</string>
    <string name="logining">登录中,请稍后...</string>
    <string name="reseting">重置中,请稍后...</string>
    <string name="successInfo">重置密码成功,请登录。</string>
    <string name="resetPwd">重置密码</string>
    <string name="errorInfo">账号或密码错误,请重新输入</string>
    <string name="login_fail">登录失败</string>
    <string name="inputNewPwd">6-18位字母和数字新密码</string>
    <string name="inputPhoneAutjCodeText">请输入6位数验证码</string>
    <string name="inputNewPwdAgain">请重复一遍新密码</string>
    <string name="otherLoginWays">使用以下方式登录</string>
    <string name="weiboLogin">新浪微博</string>
    <string name="qqLogin">腾讯QQ</string>
    <string name="twitterLogin">twitter</string>
    <string name="contentStr1">我同意《远行平台服务条款》</string>
    <string name="contentStr2">《隐私权保护和个人信息利用政策》。</string>
    <string name="findHint1">您好,请输入您的手机号码,点击\"找回密码\",</string>
    <string name="findHint2">系统将通过短信把验证码发送到您的手机上。</string>
    <string name="findHint3">请在输入框中输入您注册账号时所使用的邮箱,</string>
    <string name="findHint4">我们将会把重置密码的邮件发到您的邮箱。</string>
    <string name="dialog_findPwdByPhone_text">验证码已通过短信发给您,请立即修改密码。</string>
    <string name="phoneInput">请输入注册时的邮箱/手机号码</string>
    <string name="resetSuccessStr">重置密码发送成功</string>
    <string name="resultText1">请到注册邮箱</string>
    <string name="resultText2">中查收</string>
    <string name="userHeaderName">AllKee</string>
    <string name="regNameHint">请输入邮箱或手机号</string>
    <string name="regPassWordHint">密码，6-16位数字或字母</string>
    <string name="verifyCode">验证码</string>
    <string name="verifyCodeTip">验证码已发送至手机</string>
    <string name="verifyCodeHint">请输入验证码</string>
    <string name="search_hint">搜索目的地、主题、景点等</string>
    <string name="search_hintm">搜索目的地0、主题、景点等</string>
    <string name="discovery_standard_product_label">标准</string>
    <string name="discovery_team_product_label">跟团游</string>
    <string name="discover_title_themes">全部主题</string>
    <string name="discover_title_locations">目的地</string>
    <string name="discovery_hot_keywords_text">热搜词</string>
    <string name="discovery_history_item">搜索历史</string>
    <string name="discovery_history_clear">清除历史</string>
    <string name="discover_theme_product_by">By&#160;</string>
    <string name="search_hint_default"></string>
    <string name="search_cancel">取消</string>
    <string name="search_hotLocation">目的地</string>
    <string name="search_all">全部</string>
    <string name="search_hotThemes">主题</string>
    <string name="search_tripTime">旅行时间</string>
    <string name="search_city_additionalText">个城市</string>
    <string name="choice_title">筛选条件</string>
    <string name="trip_route">线路</string>
    <string name="trip_car">车辆</string>
    <string name="trip_comments">条评价</string>
    <string name="dot">&#046;</string>
    <string name="tipContent1">下拉可以刷新</string>
    <string name="tipContent2">松开可以刷新</string>
    <string name="updateText">最近更新&#058;</string>
    <string name="loadEmpty">暂无数据</string>
    <string name="January_text">1</string>
    <string name="February_text">2</string>
    <string name="March_text">3</string>
    <string name="April_text">4</string>
    <string name="May_text">5</string>
    <string name="June_text">6</string>
    <string name="July_text">7</string>
    <string name="August_text">8</string>
    <string name="September_text">9</string>
    <string name="October_text">10</string>
    <string name="November_text">11</string>
    <string name="December_text">12</string>
    <string name="month_text">月</string>
    <string name="current_travel_achivement_text">当地旅游达人</string>
    <string name="current_travel_hotcity_text">热门城市</string>
    <string name="current_travel_product_text">旅游产品</string>
    <string-array name="discovery_location_zhCnArray">
        <item>美国</item>
        <item>日本</item>
        <item>泰国</item>
        <item>韩国</item>
        <item>中国</item>
        <item>法国</item>
    </string-array>
    <string-array name="discovery_location_enUsArray">
        <item>American</item>
        <item>JaPan</item>
        <item>ThailLand</item>
        <item>Korea</item>
        <item>China</item>
        <item>France</item>
    </string-array>
    <string name="product_traffic_str">交通</string>
    <string name="product_food_str">美食</string>
    <string name="product_shopping_str">购物</string>
    <string name="product_tip_str">小贴士</string>
    <string-array name="product_hint_array">
        <item>复活节岛,神秘巨石表情与浩大的运送工程,至今任是世人不解之谜。</item>
        <item>美国的宾馆和民宿档次不一,游客可以根据经济条件选择各类层次的旅馆投宿。</item>
        <item>美国式饮食不讲究惊喜,追求快捷方便,也不奢华,一日三餐都很方便。</item>
        <item>游人络绎不绝,市场上有很多卖旅游纪念品的,还有很多农副产品,出来到这里可以很直观的感受到朴素。</item>
        <item>您是第一次出国旅游吗?走前,我这里有8条提醒说给您,记住了,或许您的旅行会方便很多。</item>
    </string-array>
    <string name="product_category_flight_international">国际航班&#058;</string>
    <string name="product_flight_mark">-</string>
    <string name="product_flight_picked_tip">点击选择乘坐的航班</string>
    <string name="product_flight_rmb_symbol">¥</string>
    <string name="product_car_picked_tip">选择使用该车辆的日期</string>
    <string name="product_hotel_picked_tip">选择入住该酒店的日期</string>
    <string name="product_car_picked_startTime">开始时间：</string>
    <string name="product_car_picked_endTime">结束时间：</string>
    <string name="product_flight_info_clsText">清除已选择的航班信息?</string>
    <string name="blogTitleName">微游记</string>
    <string name="blogPublished">发布</string>
    <string name="blog_taking_photos">手机拍照</string>
    <string name="blog_album_photos">从手机相册选择</string>
    <string name="blog_photos_descript">给这些照片添加描述吧</string>
    <string name="trip_blog_location">所在位置</string>
    <string name="trip_blog_secret">谁可以看</string>
    <string name="trip_blog_secret_public">公开</string>
    <string name="trip_blog_secret_private">私密</string>
    <string name="trip_blog_location_default">南京</string>
    <string name="trip_blog_photo_returnBack">返回</string>
    <string name="trip_blog_photo_delete">删除</string>
    <string name="blog_detail_delete_text">删除此晒图</string>
    <string name="blog_delete_content_text">确定删除此晒图?</string>
    <string name="trip_time">行程时间</string>
    <string name="trip_start_time">开始时间</string>
    <string name="trip_end_time">结束时间</string>
    <string name="trip_visitor_text">同行游客</string>
    <string name="trip_price_range">价格范围</string>
    <string name="trip_visitor_counts">2位</string>
    <string name="zero">0</string>
    <string name="onethousand">1K</string>
    <string name="fivethousand">5K</string>
    <string name="onemillion">1W</string>
    <string name="dotfivemillion">1.5W</string>
    <string name="twomillion">2W</string>
    <string name="trip_service_category">服务类型</string>
    <string name="trip_car_service">车辆服务</string>
    <string name="trip_route_plan">行程规划</string>
    <string name="trip_home">房屋</string>
    <string name="trip_agent_buy">代订</string>
    <string name="search_result_application">使用筛选条件</string>
    <string name="search_filter_done_text">完成</string>
    <string name="product_picked_titleName">精选</string>
    <string name="my_friendship_titlebar_titleName">好友</string>
    <string name="my_friendship_query_hint_text">搜索好友</string>
    <string name="my_friendship_query_peo_text">搜索全部成员</string>
    <string name="my_friendship_is_ok_text">已关注</string>
    <string name="my_friendship_is_each_text">相互关注</string>
    <string name="my_friendship_cancel_or_not_text">确认取消关注?</string>
    <string name="individualInfo_name">个人资料</string>
    <string name="personalInfo_name">个人主页</string>
    <string name="zone_sidebar_name">圈子</string>
    <string name="message_sidebar_name">消息</string>
    <string name="friendship_sidebar_name">好友</string>
    <string name="myitinerary_sidebar_name">我的旅程</string>
    <string name="myItineraryOrder_sidebar_name">行程单</string>
    <string name="travelStory_sidebar_name">旅行故事</string>
    <string name="gowith_sidebar_name">我的结伴</string>
    <string name="accountHelper_name">记账助手</string>
    <string name="personal_comments">用户评论</string>
    <string name="personal_verificate">验证</string>
    <string name="personal_photos">照片</string>
    <string name="personal_products">产品</string>
    <string name="personal_msgSend">发送</string>
    <string name="personal_more_text">更多</string>
    <string name="personal_blog_item_name">游记</string>
    <string name="personal_attention_item_name">关注</string>
    <string name="personal_fans_item_name">粉丝</string>
    <string name="personal_focusOn_tv">关注TA</string>
    <string name="personal_focusOff_tv">取消关注</string>
    <string name="personal_hi_more_text">Hi</string>
    <string name="personal_more_age_text">年龄</string>
    <string name="personal_more_area_text">地区</string>
    <string name="personal_more_job_text">职业</string>
    <string name="personal_more_educate_text">教育</string>
    <string name="personal_more_language_text">语言</string>
    <string name="personal_more_record_text">TA的过往</string>
    <string name="servicer_focused_str">关注</string>
    <string name="servicer_fans_str">粉丝</string>
    <string name="servicer_browser_page">访问主页</string>
    <string name="zone_is_ok_text">赞</string>
    <string name="zone_content_category_tripStory">发布了微游记</string>
    <string name="zone_content_category_goWith">发布了结伴</string>
    <string name="zone_content_category_product">发布了新产品</string>
    <string-array name="personal_verificate_items">
        <item>电子邮箱</item>
        <item>电话号码</item>
        <item>座驾</item>
        <item>身份</item>
    </string-array>
    <string-array name="personal_isVerificate">
        <item>已验证</item>
        <item>未验证</item>
    </string-array>
    <string name="setting_titleName">设置</string>
    <string name="setting_imgUpload_text">图片上传条件</string>
    <string name="setting_clsCache_text">清除缓存</string>
    <string name="setting_aboutUs_text">关于我们</string>
    <string name="setting_checkForUpdate_text">版本检查</string>
    <string name="setting_new_mark">NEW</string>
    <string name="setting_new_info">有新版本可用</string>
    <string name="setting_evaluate_text">去评价</string>
    <string name="setting_help_text">帮助</string>
    <string name="setting_exit_text">退出账号</string>
    <string name="setting_check_new_version_text">检查新版本</string>
    <string name="setting_check_new_version_usage_introduce_text">使用条款</string>
    <string name="setting_check_new_version_private_policy_text">隐私策略</string>
    <string name="setting_check_new_version_and_text">和</string>
    <string name="setting_check_new_version_company_version_text">南京远游信息科技有限公司版权所有</string>
    <string name="calendar_sunday">日</string>
    <string name="calendar_monday">一</string>
    <string name="calendar_tuesday">二</string>
    <string name="calendar_wednsday">三</string>
    <string name="calendar_thursday">四</string>
    <string name="calendar_firday">五</string>
    <string name="calendar_saturday">六</string>
</resources>