<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tableViewCalendar"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:stretchColumns="1,2,3,4,5,6,7" >

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:background="@color/gray_bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <com.bcinfo.tripaway.view.textview.NormalTfTextView
                android:layout_width="fill_parent"
                android:layout_height="@dimen/border_width"
                android:background="@color/gray_border" />

            <com.bcinfo.tripaway.view.textview.NormalTfTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="5dip"
                android:text="@string/calendar_sunday"
                android:textColor="@color/dark_gray"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <com.bcinfo.tripaway.view.textview.NormalTfTextView
                android:layout_width="fill_parent"
                android:layout_height="@dimen/border_width"
                android:background="@color/gray_border" />

            <com.bcinfo.tripaway.view.textview.NormalTfTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="5dip"
                android:text="@string/calendar_monday"
                android:textColor="@color/dark_gray"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <com.bcinfo.tripaway.view.textview.NormalTfTextView
                android:layout_width="fill_parent"
                android:layout_height="@dimen/border_width"
                android:background="@color/gray_border" />

            <com.bcinfo.tripaway.view.textview.NormalTfTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="5dip"
                android:text="@string/calendar_tuesday"
                android:textColor="@color/dark_gray"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <com.bcinfo.tripaway.view.textview.NormalTfTextView
                android:layout_width="fill_parent"
                android:layout_height="@dimen/border_width"
                android:background="@color/gray_border" />

            <com.bcinfo.tripaway.view.textview.NormalTfTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="5dip"
                android:text="@string/calendar_wednsday"
                android:textColor="@color/dark_gray"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <com.bcinfo.tripaway.view.textview.NormalTfTextView
                android:layout_width="fill_parent"
                android:layout_height="@dimen/border_width"
                android:background="@color/gray_border" />

            <com.bcinfo.tripaway.view.textview.NormalTfTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="5dip"
                android:text="@string/calendar_thursday"
                android:textColor="@color/dark_gray"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <com.bcinfo.tripaway.view.textview.NormalTfTextView
                android:layout_width="fill_parent"
                android:layout_height="@dimen/border_width"
                android:background="@color/gray_border" />

            <com.bcinfo.tripaway.view.textview.NormalTfTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="5dip"
                android:text="@string/calendar_firday"
                android:textColor="@color/dark_gray"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <com.bcinfo.tripaway.view.textview.NormalTfTextView
                android:layout_width="fill_parent"
                android:layout_height="@dimen/border_width"
                android:background="@color/gray_border" />

            <com.bcinfo.tripaway.view.textview.NormalTfTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="5dip"
                android:text="@string/calendar_saturday"
                android:textColor="@color/dark_gray"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>
    </TableRow>

</TableLayout>