<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/findPassWordLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/milk_color"
    android:orientation="vertical" >

    <!-- 包含一个登录-注册的一级标题栏 -->

    <include layout="@layout/logreg_title" />

    <!-- 下面定义一个相对布局 -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="17dp" >

        <com.bcinfo.tripaway.view.textview.NormalTfTextView
            android:id="@+id/findHintLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:lineSpacingMultiplier="1.2"
            android:singleLine="true"
            android:text="@string/findHint1"
            android:textColor="@color/shadow_gray"
            android:textSize="16sp" />

        <com.bcinfo.tripaway.view.textview.NormalTfTextView
            android:id="@+id/findHintLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/findHintLayout1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="2dp"
            android:lineSpacingMultiplier="1.2"
            android:singleLine="true"
            android:text="@string/findHint2"
            android:textColor="@color/shadow_gray"
            android:textSize="16sp" />

        <!-- 下面定义一个注册邮箱输入的自定义EditText -->

        <LinearLayout
            android:id="@+id/emailInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/findHintLayout2"
            android:layout_marginTop="25dp"
            android:background="@drawable/shape_logreg_cell_normal"
            android:orientation="horizontal" >

            <com.bcinfo.tripaway.view.textview.NormalTfTextView
                android:layout_width="15dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:background="@drawable/smartphone"
                android:gravity="center_vertical|center_horizontal" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="27dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="12dp"
                android:background="@color/shadow_gray" />

            <com.bcinfo.tripaway.view.editText.DeletedEditText
                android:id="@+id/registerName"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center_vertical"
                android:background="@null"
                android:drawableRight="@drawable/ic_launcher"
                android:hint="@string/phoneInput"
                android:inputType="phone"
                android:paddingLeft="15dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/shadow_gray"
                android:textSize="18sp" />
        </LinearLayout>
        <!-- 下面定义一个"重置密码"的控件 -->

        <LinearLayout
            android:id="@+id/resetPassWordLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/emailInputLayout"
            android:layout_marginTop="15dp"
            android:background="@drawable/shape_logreg_btn_normal"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal" >

            <com.bcinfo.tripaway.view.textview.NormalTfTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:text="@string/resetPassword"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>